# YABin

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  API.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  process.yml  svelte.config.js  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build-push-docker.yml  ci.yaml
cli/: README.md  pyproject.toml
cli/yabin/: cli.py  client.py  crypto.py
k8s/: kubernetes.yaml  kustomization.yaml
scripts/: run.sh
src/: app.css  app.html  hooks.server.ts
src/lib/: crypto.ts  data.ts  types.ts
src/lib/components/: Hamburger.svelte
src/lib/prisma/: schema.prisma
src/lib/server/: auth.ts  services.ts  validate.ts
src/lib/server/email/: base.ts  reset-password.ts  verify.ts
src/lib/server/prisma/: schema.prisma
src/lib/utils/: time.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/(auth)/: +layout.svelte
src/routes/(auth)/forgot-password/: +page.server.ts  +page.svelte
src/routes/(auth)/login/: +page.server.ts  +page.svelte
src/routes/(auth)/logout/: +page.server.ts
src/routes/(auth)/register/: +page.server.ts  +page.svelte
src/routes/(auth)/reset-password/: +page.server.ts  +page.svelte
src/routes/(auth)/validate/: +page.server.ts
src/routes/[key]/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +server.ts
src/routes/[key]/edit/: +page.server.ts  +page.svelte
src/routes/dashboard/: +layout.svelte
src/routes/info/: +page.svelte
(+19 files in other folders)
